--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
         "ts-node": "~5.0.1",
         "tslint": "~5.9.1",
         "typescript": "~2.8.0"
+    },
+    "resolutions": {
+	"**/**/engine.io-client": "^3.1.4"
     }
 }
