--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/cdk": "^13.3.1",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/material": "^13.3.1",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
+    "@angular/animations": "^16.0.1",
+    "@angular/cdk": "^16.0.1",
+    "@angular/common": "^16.0.1",
+    "@angular/compiler": "^16.0.1",
+    "@angular/core": "^16.0.1",
+    "@angular/forms": "^16.0.1",
+    "@angular/material": "^16.0.1",
+    "@angular/platform-browser": "^16.0.1",
+    "@angular/platform-browser-dynamic": "^16.0.1",
+    "@angular/router": "^16.0.1",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.28.0",
     "moment": "^2.29.4",
-    "ngx-spinner": "^13.1.1",
+    "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular-devkit/build-angular": "^16.0.1",
+    "@angular/cli": "^16.0.1",
+    "@angular/compiler-cli": "^16.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "husky": "^7.0.4",
@@ -65,9 +65,9 @@
     "karma-super-dots-reporter": "^0.2.0",
     "lint-staged": "^12.3.7",
     "ng-bullet": "^1.0.3",
-    "ng-mocks": "^13.3.0",
+    "ng-mocks": "^14.10.1",
     "prettier": "^2.6.1",
     "puppeteer": "^13.5.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.9.5"
   }
 }
